[gd_scene load_steps=7 format=3 uid="uid://bs1xci1d0mbkk"]

[ext_resource type="Script" uid="uid://vbgrtsl6j0dq" path="res://UI/end_level_menu.gd" id="1_r3jy5"]
[ext_resource type="StyleBox" uid="uid://bxs3ugggmvhlf" path="res://UI/style/button_hover.tres" id="2_3hhi0"]
[ext_resource type="StyleBox" uid="uid://d04yh53mfyyn" path="res://UI/style/back_panel.tres" id="2_5mc0e"]
[ext_resource type="StyleBox" uid="uid://nle3h4b7dko3" path="res://UI/style/button_normal.tres" id="3_c5v8m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kq6l2"]
bg_color = Color(0.4489, 0.629465, 0.67, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.77, 0.77, 0.77, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_orpgi"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="end_level_menu" type="CanvasLayer"]
script = ExtResource("1_r3jy5")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.25
anchor_right = 0.7
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_5mc0e")

[node name="Container" type="Control" parent="Control/Panel"]
layout_mode = 1
anchor_left = 0.16059
anchor_top = 0.160494
anchor_right = 0.839844
anchor_bottom = 0.901235
offset_right = -3.05176e-05
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Score" type="Panel" parent="Control/Panel/Container/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kq6l2")

[node name="Label" type="Label" parent="Control/Panel/Container/VBoxContainer/Score"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Score 1"
horizontal_alignment = 1

[node name="Score2" type="Panel" parent="Control/Panel/Container/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kq6l2")

[node name="Label" type="Label" parent="Control/Panel/Container/VBoxContainer/Score2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Score 1"
horizontal_alignment = 1

[node name="Score3" type="Panel" parent="Control/Panel/Container/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kq6l2")

[node name="Label" type="Label" parent="Control/Panel/Container/VBoxContainer/Score3"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Score 1"
horizontal_alignment = 1

[node name="Score4" type="Panel" parent="Control/Panel/Container/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kq6l2")

[node name="Label" type="Label" parent="Control/Panel/Container/VBoxContainer/Score4"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Score 1"
horizontal_alignment = 1

[node name="Score5" type="Panel" parent="Control/Panel/Container/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kq6l2")

[node name="Label" type="Label" parent="Control/Panel/Container/VBoxContainer/Score5"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Score 1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/Container"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.851233
anchor_right = 1.0001
anchor_bottom = 1.00037
offset_top = -0.29599
offset_right = -0.0306702
offset_bottom = -0.0889587
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Retry" type="Button" parent="Control/Panel/Container/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/hover = ExtResource("2_3hhi0")
theme_override_styles/normal = ExtResource("3_c5v8m")
text = "Retry"

[node name="VSeparator" type="VSeparator" parent="Control/Panel/Container/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_orpgi")

[node name="Menu" type="Button" parent="Control/Panel/Container/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/hover = ExtResource("2_3hhi0")
theme_override_styles/normal = ExtResource("3_c5v8m")
text = "Menu"

[connection signal="button_down" from="Control/Panel/Container/HBoxContainer/Retry" to="." method="_on_retry_button_down"]
[connection signal="button_down" from="Control/Panel/Container/HBoxContainer/Menu" to="." method="_on_menu_button_down"]
